--- a/www/index.html
+++ b/www/index.html
@@ -22,16 +22,18 @@
         <script src="js/app.js"></script>
         <script src="js/TravelListCtrl.js"></script>
         <script src="js/ExpenseListCtrl.js"></script>
+        <script src="js/factories.js"></script>
 
     </head>
     <body ng-app="GroupTravelTracker">
 
-        <ion-pane>
+        
             <ion-header-bar class="bar-stable">
                 <h1 class="title">Group Travel Tracker</h1>
             </ion-header-bar>
             <ion-content>
+                <ion-nav-view></ion-nav-view>
             </ion-content>
-        </ion-pane>
+        
     </body>
 </html>
