finish adding peaple to new travel

--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,7 @@
         <script src="js/TravelListCtrl.js"></script>
         <script src="js/ExpenseListCtrl.js"></script>
         <script src="js/factories.js"></script>
+        <script src="js/PeopleManagementCtrl.js"></script>
 
     </head>
     <body ng-app="GroupTravelTracker">
